--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Data</string>
+    <string name="age_message">You are %d years old</string>
+    <string name="next_user">Next user</string>
+    <string name="prev_user">Previous user</string>
 </resources>
